--- a/db/templates/db/index.html
+++ b/db/templates/db/index.html
@@ -2,4 +2,6 @@
 {% include 'db/Header.html' %}
 <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
 
+{{  mygroup }}
+
 {% include 'db/Footer.html' %}
