--- a/db/templates/db/sell.html
+++ b/db/templates/db/sell.html
@@ -27,6 +27,20 @@
 
 
 
+                <div class="form-group">
+                    Product Name
+                    <input type="text" class="form-control form-control-user"  name="name" placeholder="Product Name">
+
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control form-control-user" name="unite_type"
+                           placeholder="unite type">
+                </div>
+
+                <div class="form-group">
+                    <input type="number" class="form-control form-control-user" name="Count" placeholder="Count">
+                </div>
+
 
                 <div class="form-group">
                     canning date
@@ -85,22 +99,6 @@
                 </div>
 
             {% endif %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
